Fixing key metrics dark mode

--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -76,6 +76,7 @@ $colors: (
       base: $tertiary-700,
       light: $tertiary-600,
       lighter: $tertiary-400,
+      lightest: $tertiary-100,
       dark: $tertiary-800,
       darker: $tertiary-900,
     ),
@@ -83,6 +84,7 @@ $colors: (
       base: $quaternary-700,
       light: $quaternary-600,
       lighter: $quaternary-400,
+      lightest: $quaternary-100,
       dark: $quaternary-800,
       darker: $quaternary-900,
     ),
